--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -1,4 +1,4 @@
 gpu: null
-token_type: form
-datasets: [french, spanish]
-models: [xlm-roberta-base, bert-base-multilingual-cased]
+token_type: '???'
+language: '???'
+models: ['???', '???']
